# rusty-sdl

./: .gitignore  Cargo.toml
src/: asset_manager.rs  assets.rs  engine.rs  input.rs  main.rs  vec2.rs
src/ecs/: animation.rs  collision.rs  components.rs  enemy.rs  player.rs  renderer.rs  resources.rs  systems.rs  weapon.rs
